swagger addDrink fix
